// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render in checked state 1`] = `
<label
  class="genericCheckbox"
>
  <span
    class="checkbox"
  >
    <input
      checked=""
      type="checkbox"
    />
    <span />
  </span>
</label>
`;

exports[`The component should render in unchecked state 1`] = `
<label
  class="genericCheckbox"
>
  <span
    class="checkbox"
  >
    <input
      type="checkbox"
    />
    <span />
  </span>
</label>
`;

exports[`The component should render in with class 1`] = `
<label
  class="genericCheckbox"
>
  <span
    class="checkbox my-class"
  >
    <input
      type="checkbox"
    />
    <span />
  </span>
</label>
`;
